# Feeder

./: .gitignore  CMakeLists.txt  build.sh  example.c  flash.sh
I2C_notes/: .~lock.I2C.odt#  I2C.odt  I2C_notes.txt
UGUI/: CMakeLists.txt  ugui.c  ugui_config.h  ugui_fonts.c  ugui_main.c  ugui_main.h
hal/: CMakeLists.txt  hal_delay.c  hal_exti.c  hal_exti.h  hal_flash.c  hal_flash.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_rcc.c  hal_rcc.h  hal_rtc.c  hal_rtc.h  hal_spi.c  hal_spi.h  hal_usart.c  hal_usart.h  hal_wdt.c  hal_wdt.h
hal/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
includes/: FreeRTOSConfig.h
libs/LCD1602/: CMakeLists.txt  lcd1602_i2c.c  lcd1602_i2c.h
libs/PCF8574T/: PCF8574T.c  PCF8574T.h
libs/nokia5110/: CMakeLists.txt  lcd_main.c  lcd_main.h  logos.h  miniprintf.h  nokia5110.c  nokia5110.h  pcd8574.c  pcd8574.h
libs/uGUI/: CMakeLists.txt  miniprintf.c  miniprintf.h  ugui.c  ugui.h  ugui_config.h  ugui_fonts.c  ugui_main.c
src/: CMakeLists.txt  STM32F103XB_FLASH.ld  communication.c  communication.h  flashman.c  flashman.h  flashmngr.c  flashmngr.h  main.c  mcu_config.c  mcu_config.h  startup_stm32f103xb.s  time.c  tsm_jc_calendar.c  tsm_jc_calendar.h
src/utils/: mcuio.c
